--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
 {
-  "source": "./odate.opam"
+  "name": "odate",
+  "version": "1.0",
+  "esy": {
+    "build": "dune build -p #{self.name}"
+  },
+  "dependencies": {
+    "ocaml": "*",
+    "@opam/dune": "*",
+    "@opam/menhir": "*"
+  }
 }
